<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_format_option"
        android:textSize="20sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radio_pirates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mp3_format_option"
            android:textSize="@dimen/text_size_regular"
            android:buttonTint="@color/colorPurple"
            android:checked="true"
            android:paddingStart="5dp"/>

        <RadioButton android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPurple"
            android:textSize="@dimen/text_size_regular"
            android:text="@string/wav_format_option"
            android:paddingStart="5dp"/>

    </RadioGroup>

</LinearLayout>
