<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="2dp"
        app:cardBackgroundColor="@color/colorDarkGray"
        android:focusable="true"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/sound"
                android:id="@+id/image_sound"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/image_sound_description">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/image_sound"
                android:gravity="center"
                android:layout_toStartOf="@id/image_more">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_file_title"
                    android:textSize="@dimen/text_size_regular"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_file_weight"
                    android:textSize="@dimen/text_size_xs"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_more"
                android:layout_alignParentEnd="true"
                android:id="@+id/image_more"
                android:contentDescription="@string/image_more_description">
            </ImageView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>