<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio_format_option"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_mp3_format"
                    android:layout_width="382dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mp3_format_option"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/mp3_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_wav_format"
                android:layout_width="382dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/wav_format_option"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/wav_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
