<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment"
    android:id="@+id/fragment_home">

    <include
        android:id="@+id/include_toolbar_home"
        layout="@layout/include_toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_below="@id/include_toolbar_home">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_xl" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beam_editor_description"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_regular" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_below="@id/linearLayout3">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="145dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorDarkGray"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="test"
                            android:src="@drawable/ic_music_player" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/make_your_extract"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_size_small" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="145dp"
                    android:layout_height="120dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorDarkGray"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_phone" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/set_ringtone"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_size_small" />


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="145dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorDarkGray"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_sound_folder" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/my_library"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_size_small" />


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="145dp"
                    android:layout_height="120dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorDarkGray"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_equalizator" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/audio_settings"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_size_small" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>