<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="66dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_sound_quality"
            android:layout_width="46dp"
            android:layout_height="39dp"
            android:contentDescription="@string/sound_quality_option"
            app:srcCompat="@drawable/ic_sound_quality">

        </ImageView>

        <LinearLayout
            android:layout_width="355dp"
            android:layout_height="37dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="7dp"
            android:layout_toEndOf="@+id/img_sound_quality"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_sound_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sound_quality_option" />

            <TextView
                android:id="@+id/txt_sound_quality_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="66dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_audio_format"
                android:layout_width="46dp"
                android:layout_height="39dp"
                android:contentDescription="@string/sound_quality_option"
                app:srcCompat="@drawable/ic_audio_format">

            </ImageView>

            <LinearLayout
                android:layout_width="355dp"
                android:layout_height="37dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="7dp"
                android:layout_toEndOf="@+id/img_audio_format"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_audio_format"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_format_option" />

                <TextView
                    android:id="@+id/txt_audio_format_selected_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="66dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_extract_time"
                android:layout_width="46dp"
                android:layout_height="39dp"
                android:contentDescription="@string/extract_time_option"
                app:srcCompat="@drawable/ic_extract_time">

            </ImageView>

            <LinearLayout
                android:layout_width="355dp"
                android:layout_height="37dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="7dp"
                android:layout_toEndOf="@+id/img_extract_time"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_extract_time"
                    android:layout_width="162dp"
                    android:layout_height="wrap_content"
                    android:text="@string/extract_time_option" />

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="-"
                    android:textColor="@color/colorWhite"/>

                <EditText
                    android:id="@+id/extract_time_option"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time"
                    android:text="2:00" />
                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="+"
                    android:textColor="@color/colorWhite"/>


            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="66dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_storage_path"
                android:layout_width="46dp"
                android:layout_height="39dp"
                android:contentDescription="@string/storage_path_option"
                app:srcCompat="@drawable/ic_storage_path">

            </ImageView>

            <LinearLayout
                android:layout_width="355dp"
                android:layout_height="37dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="7dp"
                android:layout_toEndOf="@+id/img_storage_path"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_storage_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_format_option" />


            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>